2008-11-07  Sancho Lerena <slerena@gmail.com>

	* install.php: Installer create a bad homeurl variable, should be
	like /pandora_console, not http://localhost/pandora_console

2009-11-05  Jorge Gonzalez  <jorgegonz@artica.es>

        * include/languages/pt_BR.mo, include/languages/fr.po,
          include/languages/uk.mo, include/languages/ro.mo,   
          include/languages/ca.po, include/languages/sv.po,   
          include/languages/de.po, include/languages/zh_TW.po,
          include/languages/hi.po, include/languages/zh_CN.po,
          include/languages/fr.mo, include/languages/te.po,   
          include/languages/eu.po,  include/languages/hu.po,  
          include/languages/ca.mo, include/languages/de.mo,   
          include/languages/sv.mo, include/languages/ru.po, 
          include/languages/zh_TW.mo, include/languages/hi.mo,
          include/languages/zh_CN.mo, include/languages/gl.po,
          include/languages/te.mo, include/languages/eu.mo,   
          include/languages/hu.mo,  include/languages/pl.po,  
          include/languages/it.po, include/languages/sl.po,   
          include/languages/ru.mo, include/languages/pt.po, 
          include/languages/ast.po, include/languages/gl.mo: Updated
          translations from rosetta: thanks to all contributors.

2008-11-04  Jorge Gonzalez  <jorgegonz@artica.es>                              

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
          translation.
                       
2008-10-31  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation.

	* include/languages/index.pot, include/languages/Makefile: Updated
	  translation infrastructure.

	* include/languages/fi.po, include/languages/fi.mo: Added finnish
	  translation from Rosetta.

>>>>>>> .r1223
2008-10-28  Esteban Sanchez  <estebans@artica.es>

	* godmode/modules/manage_network_components.php: Replaced parameters